tests/ui/missing_type_with_identifier.stderr
error: Missing response type in @response annotation
       help: format is '@response <code> <type> <description>'
       note: did you forget to add the type? For example:
       note:   '@response 200 () Todo user information'
       note: common types: () for empty responses, Json<T> for JSON, (StatusCode, Json<T>) for custom status
 --> tests/ui/missing_type_with_identifier.rs:8:1
  |
8 | /// @response 200 Todo user information
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
